# Plataforma-de-Streaming-_-progra-III-

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/core/: Normalizador.h  Trie.cpp  Trie.h
src/data/: CSVReader.cpp  CSVReader.h  Pelicula.h  RelevanceScorer.h  TagIndex.cpp  TagIndex.h
src/search/: Buscador.cpp  Buscador.h  RelevanceScorer.cpp  RelevanceScorer.h
src/ui/: Menu.cpp  Menu.h  Paginador.cpp  Paginador.h
src/user/: Recommender.cpp  Recommender.h  UserData.cpp  UserData.h
test/: test_trie.cpp
